[tool.poetry]
name = "riemannian-study"
version = "0.1.0"
description = ""
authors = ["lucascust2 <lcustodio@tractian.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyriemann = "^0.2.7"
mne = "^0.24.1"
sklearn = "^0.0"
moabb = "^0.4.4"
numpy = "^1.22.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
